[tool.poetry]
name = "time-series-irreversibility"
version = "0.1.0"
description = ""
authors = ["jtheol"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.1.1"
ipykernel = "^6.29.5"
matplotlib = "^3.9.2"
ts2vg = "^1.2.4"
networkx = "^3.3"
scienceplots = "^2.1.1"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
